--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
         <h1 class="section-1-heading">
           vBayers
         </h1>
-        <img src="images/pk.png" alt="John Smith" class="person-img" />
-        <h3 class="person-name">Pankaj Sharma</h3>
+        <img src="images/pk-2.jpeg" alt="John Smith" class="person-img" />
+        <h3 class="person-name">we can alive your dreams </h3>
         <a href="#section-3" class="section-1-btn">Projects</a>
       </section>
       <!-- End of Section 1 -->
