--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
       <!-- Section 2 -->
       <section class="section-2" id="section-2">
-        <h1 class="section-heading section-2-heading">About Me</h1>
+        <h1 class="section-heading section-2-heading">About Us</h1>
         <div class="progress-bars-wrapper">
           <div class="progress-bar">
             <p class="progress-text">
@@ -62,13 +62,7 @@
             </p>
             <div class="progress-percent"></div>
           </div>
-          <div class="progress-bar">
-            <p class="progress-text">
-            on time project
-              <span></span>%
-            </p>
-            <div class="progress-percent"></div>
-          </div>
+    
         </div>
         <div class="services">
           <div class="service">
