--- a/index.html
+++ b/index.html
@@ -205,6 +205,7 @@
         <p class="copyright">
           Copyright &copy;vBayers . All Rights Reserved
         </p>
+        <a href="https://deepanshutyagi.netlify.app/">❤ by Deepanshu Tyagi</a>
       </footer>
       <!-- End of Section 5 -->
     </div>
