--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
       <!-- Section 3 -->
       <section class="section-3" id="section-3">
-        <h1 class="section-heading section-3-heading">My Projects</h1>
+        <h1 class="section-heading section-3-heading">Our Projects</h1>
         <div class="projects-wrapper center">
           <div class="project">
             <div class="project-text">
@@ -180,7 +180,7 @@
         <img src="./images/phone-1831920_1280.png" width="150px" alt="">
   <h1 class="phn">
     +91 8930082398 <br />
-    +91 83955959426
+    +91 8395959426
   </h1>
       
       
